fixed overflow in mobile screens

--- a/lmnt/src/components/Chat.css
+++ b/lmnt/src/components/Chat.css
@@ -139,3 +139,10 @@
   margin: 0px 10px 5px 10px;
   }
 }
+@media (max-width: 900px) {
+  .Chat {
+    max-height: 60%;
+    flex: auto;
+  margin: 0px 10px 5px 10px;
+  }
+}
